--- a/core/aws-core/pom.xml
+++ b/core/aws-core/pom.xml
@@ -50,6 +50,11 @@
         </dependency>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
+            <artifactId>http-auth-spi</artifactId>
+            <version>${awsjavasdk.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>software.amazon.awssdk</groupId>
             <artifactId>profiles</artifactId>
             <version>${awsjavasdk.version}</version>
         </dependency>
