--- a/services/codecatalyst/pom.xml
+++ b/services/codecatalyst/pom.xml
@@ -45,6 +45,10 @@
         </plugins>
     </build>
 
+    <properties>
+        <checkstyle.skip>true</checkstyle.skip>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>software.amazon.awssdk</groupId>
